fixed bug  ant not showing topbar and analytics

--- a/packages/fe-container/src/App.less
+++ b/packages/fe-container/src/App.less
@@ -22,8 +22,5 @@
 .ant-layout {
   min-height: 100%;
   height: 100%;
-}
-
-.ant-layout-content {
-  min-height: 100%;
+  background-color: var(--microlc-body-background);
 }
